### 17-Apr-2023 - MDD - Version 3.7.0
    -  Implementation to use an image to detect and flag full-well saturation versus a simple scalar.
       The new routine, dofwsat.c, is similar to what has been done for calacs. The WFC3 implementation
       is more complicated in that there are serial virtual overscan columns, as well as binned images,
       to accommodate.  The detection/flagging occurs after blev and bias correction while the output is
       still in counts.

### 27-May-2021 - MDD - Version 3.6.2
    - Bug fix to address calwf3.e crashing (Abort trap: 6) when taking an existing *_ima.fits (IR) file
      (produced with FLATCORR=PERFORM and CRCORR=OMIT) with CRCORR set to PERFORM. This reentrant
      processing is fundamental to being able to remove the variable IR background during the course
      of an exposure. Problem: char variable declared too small to hold its largest possible contents.

### 28-Apr-2021 - MDD - Version 3.6.1
    - Bug fix to address a problem detected when processing a Tungsten flat with a high background.
      Uninitialized values were used for further computation causing an eventual exception.

### 31-Dec-2020 - MDD - Version 3.6.0
    - Implementation of a significantly upgraded CTE correction as defined/derived by J. Anderson.
      The upgraded CTE algorithm is also streamlined and executes faster then the previous version.

### 12-Aug-2020 - MDD - Version 3.5.2
    - Added MJD as a parameterized variable for the PHOTMODE keyword to
      enable a time-dependent photometric correction for the UVIS only.
    - Fixed a bug in the IMPHTTAB package to support properly data with 
      multiple imsets, in conjunction with a parameterized value.

### 24-Jun-2020 - MDD - Version 3.5.1
    - Replaced/modified routines based upon copyright numerical recipes routines.
      Updates implemented Oct 2019, but installation delayed for higher priority updates.

### 14-Oct-2018 - JAN/MDD - Version 3.5.0