@@ -4,7 +4,7 @@
 /* This string is written to the output primary header as CAL_VER. */
 
 
-# define WF3_CAL_VER "3.7.0 (Apr-17-2023)"
+# define WF3_CAL_VER "3.7.0 (Jun-08-2023)"
 # define WF3_CAL_VER_NUM "3.7.0"
 
 #endif /* INCL_WF3VERSION_H */
