@@ -23,6 +23,7 @@ typedef struct {
 	IRAFPointer cp_readnoise[NAMPS];
 	IRAFPointer cp_ampx;
 	IRAFPointer cp_ampy;
+	IRAFPointer cp_saturate;
 	IRAFPointer cp_pedigree;
 	IRAFPointer cp_descrip;
 	int nrows;			/* number of rows in table */
@@ -39,6 +40,7 @@ typedef struct {
 	float readnoise[NAMPS];
 	int ampx;
 	int ampy;
+    float saturate;
 } TblRow;
 
 static int OpenCCDTab (char *, TblInfo *);
@@ -114,6 +116,10 @@ static int CloseCCDTab (TblInfo *);
     16 Feb 2022: M. De La Pena:
     The "saturate" variable became obsolete once the full-well saturation
     map was implemented. Removed "saturate" as a cleanup operation.
+
+    25 May 2023: M. De La Pena:
+    Resurrect the "saturate" variable so the original method of flagging
+    saturated pixels can be used if the saturation image is not available.
 */
 
 int GetCCDTab (WF3Info *wf3, int dimx, int dimy) {
@@ -198,6 +204,7 @@ int     dimy      i: number of lines in exposure
 		else
 		    wf3->ampx = tabrow.ampx;
 		wf3->ampy = tabrow.ampy;		
+        wf3->saturate = tabrow.saturate;
 
 		break;
 	    }
@@ -277,6 +284,7 @@ static int OpenCCDTab (char *tname, TblInfo *tabinfo) {
 	c_tbcfnd1 (tabinfo->tp, "READNSED", &tabinfo->cp_readnoise[3]);
 	c_tbcfnd1 (tabinfo->tp, "AMPX", &tabinfo->cp_ampx);
 	c_tbcfnd1 (tabinfo->tp, "AMPY", &tabinfo->cp_ampy);
+	c_tbcfnd1 (tabinfo->tp, "SATURATE", &tabinfo->cp_saturate);
 	
 	/* Initialize counters here... */
 	missing = 0;
@@ -308,6 +316,7 @@ static int OpenCCDTab (char *tname, TblInfo *tabinfo) {
 	if (tabinfo->cp_readnoise[3] == 0 ) { missing++; nocol[i] = YES;} i++;
 	if (tabinfo->cp_ampx == 0 ) { missing++; nocol[i] = YES;} i++;
 	if (tabinfo->cp_ampy == 0 ) { missing++; nocol[i] = YES;} i++;
+	if (tabinfo->cp_saturate == 0 ) { missing++; nocol[i] = YES;} i++;
 	
 	if (PrintMissingCols (missing, NUMCOLS, nocol, colnames, "CCDTAB", tabinfo->tp) )
 		return(status);
@@ -433,6 +442,10 @@ static int ReadCCDTab (TblInfo *tabinfo, int row, TblRow *tabrow) {
 	if (c_iraferr())
 	    return (status = TABLE_ERROR);
 	c_tbegti (tabinfo->tp, tabinfo->cp_ampy, row, &tabrow->ampy);
+	if (c_iraferr())
+	    return (status = TABLE_ERROR);
+
+	c_tbegtr (tabinfo->tp, tabinfo->cp_saturate, row, &tabrow->saturate);
 	if (c_iraferr())
 	    return (status = TABLE_ERROR);
 		
