@@ -76,6 +76,10 @@
     Added variable, satmap - the reference image for full-well
     saturation. Use of this image rendered wf3->saturate variable
     obsolete.  Removed "wf3->saturate" as part of the cleanup operation.
+
+  M. De La Pena 2023 May:
+    Resurrected the "wf3->saturate" variable so it can be used when a
+    saturation image is not available.
 */
 
 void WF3Init (WF3Info *wf3) {
@@ -133,6 +137,8 @@ void WF3Init (WF3Info *wf3) {
 	}
 	wf3->ampx = 0;
 	wf3->ampy = 0;
+	wf3->saturate = 0.;
+	wf3->scalar_satflag = False;
 	wf3->trimx[0] = 0;
 	wf3->trimx[1] = 0;
 	wf3->trimx[2] = 0;
@@ -295,7 +301,7 @@ int GetTabRef (RefFileInfo *refnames, Hdr *phdr,
 
 void MissingFile (char *keyword, char *filename, int *missing) {
 
-	sprintf (MsgText, "%s `%s' not found or can't open.", keyword, filename);
+	sprintf (MsgText, "%s '%s' not found or cannot be opened.", keyword, filename);
 	trlerror (MsgText);
 	(*missing)++;
 }
